fix button component z-index

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -6,7 +6,7 @@
   border: none;
   color: black;
   overflow: hidden;
-  z-index: -2;
+  // z-index: ;
   transition: transform 1.2s $ease-out-expo;
 
   @media only screen and (min-width: 1681px) {
